[package]
name = "rust-web3_meets_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
hex-literal = "0.3.4"
web3 = { version = "0.18.0", default-features = false, features = ["wasm", "http"] }
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z'
lto = "thin" # other docs say lto can be `true`
